<resources>
    <string name="app_name">Tuition Management System</string>
    <string name="loading_activity_heading">Tuition Management System</string>
    <string name="login_activity_heading">LOGIN</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_submit_button_txt">Login</string>
    <string name="login_UserType_Teacher">Teacher</string>
    <string name="login_UserType_Student">Student</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="hi_message">Hi message</string>
    <string name="teacher_dashboard">Teacher Dashboard</string>
    <string name="hi">Hi</string>
    <string name="contact1">Contact Us</string>
    <string name="phone"></string>
    <string name="type">Type your message here</string>
    <string name="locate">Locate Us</string>

    <string name="student_results_management_dashboard">Student Results Management Dashboard</string>
    <string name="name">Name:</string>
    <string name="subject">Subject</string>
    <string name="exam_id">Exam ID</string>
    <string name="show_my_results">Show My Results</string>
    <string name="teacher_add_result">Teacher Add Result</string>
    <string name="student_id">Student ID</string>
    <string name="mark">Mark</string>
    <string name="add">ADD</string>
    <string name="addResult">Add Result</string>
    <string name="ChooseFile">Choose a File to upload</string>
    <string name="search_result_of_a_student">Search Result of a student</string>
    <string name="add_student_results">Add student Results</string>
    <string name="update_delete_student_results">Update | Delete Student Results</string>
    <string name="teacher_results_management_dashboard">Teacher Results Management Dashboard</string>
    <string name="teacher_search_results">Teacher Search Results</string>
    <string name="search">Search</string>
    <string name="teacher_update_delete_result">Teacher Update | Delete Result</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="students_registration">Students Registration</string>
    <string name="contactno">ContactNo</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="Reenter_password">Reenter_Password</string>
    <string name="admissionno">AdmissionNo</string>
    <string name="editS">Edit Student Details</string>
    <string name="edityr">Edit Your Details</string>

    <string name="register">Register</string>
    <string name="take">Take photo</string>
    <string name="choose">Choose photo</string>
    <string name="etsName">StudentName</string>
    <string name="etAdmissionNo">AdmissionNo</string>
    <string name="contact">ContactNo</string>
    <string name="password1">Reenter_Password</string>
    <string name="register1">Register</string>
    <string name="viewd">ViewDetails</string>
    <string name="student">Student Management</string>
    <string name="viewall">View All StudentDetails</string>
    <string name="imgViewInputPhoto"></string>





    <string name="studentName">Student Name</string>
    <string name="edit_details">Edit Details</string>
    <string name="studentname">StudentName</string>
    <string name="View_studentDetails">View Student Details</string>
    <string name="View_All_studentDetails">View All Student Details</string>


    <string name="updateDeleteFeedbackView">Update Delete Feedbacks</string>
    <string name="viewFeedbacksView">View Feedbacks</string>

    <string name="sendfeedback">Send Feedback</string>
    <string name="updatefeedback">Update</string>
    <string name="deletefeedback">Delete</string>
    <string name="newSend">Send</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="give">Give Feedback</string>
    <string name="view">View Feddback</string>
    <string name="fid">Feddback Id</string>
    <string name="viewNoti">View Notifications</string>

    <string name="studentId123">Student ID</string>
    <string name="studentName123">Student Name</string>
    <string name="subject123">Subject</string>
    <string name="feedback123">Feedback</string>
    <string name="notification">Notification</string>
    <string name="sendnotifi">Send Notification</string>

    <string name="studentId1234">Student ID</string>
    <string name="studentName1234">Student Name</string>
    <string name="subject1234">Subject</string>
    <string name="feedback1234">Feedback</string>


    <string name="tute">Tutorial of the week</string>
    <string name="todo">To Do List</string>
    <string name="tuition"></string>
    <string name="homework1"></string>
    <string name="homework">Homework of the week</string>
    <string name="subDate">Submision Date</string>
    <string name="subHomework">Submit Homework</string>
    <string name="UpdateHomework">Update</string>
    <string name="DeleteHomework">Delete</string>
    <string name="upload">Upload</string>
    <string name="update_delete">Update and Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_a_file_to_upload">Choose a File to upload</string>
    <string name="add_result">Add Result</string>
    <string name="file_not_selected">File not selected</string>
    <string name="dash">-</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="selectF">Select File</string>
    <string name="upload12">Upload</string>
    <string name="nofile">No file is selected</string>
    <string name="update_result">update</string>
    <string name="viewandDownload">View And Download all Tutorials</string>

    <string name="student_id_result">Student ID :</string>

    <string name="dashsymbol1">-</string>
    <string name="subject_name">Subject Name :</string>
    <string name="dashsymb2">-</string>
    <string name="dashsymb3">-</string>
    <string name="dashsymb4">Mark :</string>
    <string name="view_results_of_all_students">View Results of All Students</string>
    <string name="results_of_all_students">Results of All Students</string>
    <string name="student_id_result1">Student ID:</string>
    <string name="subject_name_result_row">Subject Name:</string>
    <string name="exam_id_result_row">Exam ID:</string>
    <string name="document_result_row">Document :</string>
    <string name="dash_result_row">_</string>
    <string name="mark_result_row">Mark :</string>
    <string name="dash1_result_row">_</string>
    <string name="dash2_result_row">_</string>
    <string name="dash3_result_row">_</string>
    <string name="dash4_result_row">_</string>
    <string name="details_of_all_students">Details of All Students</string>

    <string name="staff">Staff Registration</string>
    <string name="txtTID">Teacher ID</string>
    <string name="registerT">Register Teacher</string>
    <string name="NIC">NIC</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="qualifications">Qualifications</string>
    <string name="specified">Specified Subjects</string>
    <string name="passwrd">Password</string>
    <string name="takephoto">Take Photo</string>
    <string name="photo"></string>




    <string name="tName">Name</string>




</resources>